# cpp_inverter_sim

./: CMakeLists.txt  README.md  main.cpp  run.txt  sim_main.cpp  sim_main.hpp  visualise_data.py
config/: cobalt_params.hpp
control/: angle_generator.hpp  current_controller.hpp  encoder_compensation.hpp  field_weakening_controller.hpp  foc_controller.hpp  modulation.hpp  pi_controller.hpp  speed_controller.hpp  transforms.hpp
include/: AverageInverter.hpp  CurrentController.hpp  Logger.hpp  PIController.hpp  PMSMModel.hpp  SPWM.hpp  Sim.hpp  Transforms.hpp  Vec.hpp
plant/: inverter.hpp  pmsm.cpp  pmsm.hpp
results/: sim_data.csv
scripts/: plot_results.py  visualise_data.py
scripts/results/: sim_data.csv
sim/: encoder_delay.hpp  inverter.hpp  logger.hpp  pmsm.cpp  pmsm.hpp  sim_main.cpp  sim_main.hpp
src/: AverageInverter.cpp  CurrentController.cpp  Logger.cpp  PIController.cpp  PMSMModel.cpp  SPWM.cpp  Sim.cpp  Transforms.cpp  main.cpp
system/: faults.hpp
